OpenLDAP 2.3 Change Log

OpenLDAP 2.3.5 Engineering
	Fixed slapd integerBitOr/AndMatch logic (ITS#3782)
	Fixed slapd substrings filter length checks (ITS#3790)
	Fixed slapd thread pool initialization (ITS#3793)
	Fixed slapi acl skipped issue (ITS#3886)
	Fixed slapd cancel exop (ITS#3549)
	Fixed slapd syncrepl cookie problem (ITS#3917)
	Fixed slapd inequality filter index bug (ITS#3920)
	Fixed slapd syncrepl ctxcsn leak (ITS#3922)
	Fixed slapd ldapi credential normalization bug (ITS#3876)
	Fixed slapd userPassword cleartext bug (ITS#3846)
	Fixed slapd cn=config default search base bug (ITS#3900)
	Fixed slapd whitespace config parsing bug (ITS#3901)
	Fixed slapi authorization name issue (ITS#3892)
	Fixed slapi slapi_int_connection_init operation problem (ITS#3868)
	Fixed slapi slapi_entry_has_children bug (ITS#3879)
	Fixed slapd-hdb modrdn base bug (ITS#3857)
	Fixed slapd-ldap access to freed connection (ITS#3913)
	Added slapd-sql enhancements (ITS#3432)
	Fixed slapd-sql truncating keyval column problem (ITS#3888)
	Fixed slapd-sql return code ignored problem (ITS#3891)
	Fixed slapo-dyngroup hidden subschemaSubentry bug (ITS#3844)
	Fixed slapo-ppolicy hashed length problem (ITS#3783)
	Fixed slapo-ppolicy quality check (ITS#3777)
	Fixed slapo-ppolicy lockout duration (ITS#3779)
	Fixed slapo-rwm leak (ITS#3914)
	Fixed slapadd segfault (ITS#3926)
	Fixed slapcat cn=config segfault (ITS#3796)
	Fixed slapd authzTo/From syntax issue (ITS#3921)
	Fixed libldap start_tls referral chasing (ITS#3791)
	Fixed libldap referral chasing issues (ITS#2894,ITS#3578)
	Build Environment
		Upgraded shtool (ITS#3752)
		Upgraded config.guess/config.sub
		Fixed FreeBSD thread stacksize problem (ITS#3456)
		Fixed cygwin shared libraries build problem (ITS#3712)
		Fixed acl_get/acl_mask v AIX symbol clash (ITS#3787)
		Fixed test020 logging problem (ITS#3811)
		Fixed duplicate symbol problem (ITS#3843)
		Fixed liblunicode 64bit builds (ITS#3869)
		Fixed passwd/kerberos module builds (ITS#3896)