@@ -15,9 +15,9 @@
 ol_package=OpenLDAP
 ol_major=2
 ol_minor=3
-ol_patch=X
-ol_api_inc=20304
-ol_api_current=0
-ol_api_revision=4
-ol_api_age=0
-ol_release_date="2005/06/10"
+ol_patch=5
+ol_api_inc=20305
+ol_api_current=1
+ol_api_revision=0
+ol_api_age=1
+ol_release_date="2005/08/13"
